<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="32dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    tools:context="ui.main.date.DateFragment">

    <TextView
        android:id="@+id/startDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_start_date"
        android:textSize="@dimen/label_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/startDateButton"
        app:layout_constraintBottom_toBottomOf="@id/startDateButton"/>

    <ImageButton
        android:id="@+id/startDateButton"
        android:layout_width="@dimen/image_button_size"
        android:layout_height="@dimen/image_button_size"
        android:src="@drawable/ic_calendar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/startDateLabel"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/endDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/select_end_date"
        android:textSize="@dimen/label_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/endDateButton"
        app:layout_constraintBottom_toBottomOf="@id/endDateButton"/>

    <ImageButton
        android:id="@+id/endDateButton"
        android:layout_width="@dimen/image_button_size"
        android:layout_height="@dimen/image_button_size"
        android:src="@drawable/ic_calendar"
        app:layout_constraintTop_toBottomOf="@id/startDateButton"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/differenceInDaysValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        tools:text="@string/difference_in_days"
        android:textSize="@dimen/value_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/endDateButton"/>

    <TextView
        android:id="@+id/differenceInWeeksValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        tools:text="@string/difference_in_weeks"
        android:textSize="@dimen/value_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/differenceInDaysValue"/>

    <TextView
        android:id="@+id/differenceInMonthsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        tools:text="@string/difference_in_months"
        android:textSize="@dimen/value_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/differenceInWeeksValue"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:src="@drawable/id_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>