<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="32dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    tools:context="ui.main.number.NumberFragment">

    <EditText
        android:id="@+id/textToConvertEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/value_size"
        android:inputType="text|textMultiLine"
        android:hint="@string/enter_numbers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/increasingListLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/label_size"
        android:layout_marginTop="16dp"
        android:text="@string/increasing_order"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textToConvertEditText"/>

    <TextView
        android:id="@+id/increasingListValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/value_size"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/increasingListLabel"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Resultado da conversão. [increasing_list]"/>

    <TextView
        android:id="@+id/decreasingListLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/label_size"
        android:text="@string/decreasing_order"
        android:layout_marginTop="24dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/increasingListValue"/>

    <TextView
        android:id="@+id/decreasingListValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/value_size"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/decreasingListLabel"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Resultado da conversão. [decreasing_list]"/>

    <TextView
        android:id="@+id/pairListLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/label_size"
        android:text="@string/pair_list"

        android:layout_marginTop="24dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/decreasingListValue"/>

    <TextView
        android:id="@+id/pairListValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/value_size"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pairListLabel"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="Resultado da conversão. [pair_list]"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:src="@drawable/id_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>